--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
       <div class="page-content">
         <section class="main-section">
           <!--Main Section-->
+          <router-outlet></router-outlet>
         </section>
       </div>
     </main>
