--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
 <div class="dashboard">
     <h1>Dashboard</h1>
+    <button (click)="printRecords()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+  Print Records
+</button>
 </div>
