--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,4 +3,5 @@
     <button (click)="printRecords()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
   Print Records
 </button>
+<arrest [arrestCount]="arrestCount"></arrest>
 </div>
