add crime types component, data model, calculation, and update arrest component

--- a/src/app/arrest-component/arrest.component.html
+++ b/src/app/arrest-component/arrest.component.html
@@ -1,13 +1,12 @@
 <div class="arrest-component">
     <div style="display: block">
         <canvas baseChart
-            [data]="doughnutChartData"
-            [labels]="doughnutChartLabels"
-            [chartType]="doughnutChartType"
+            [datasets]="barChartData"
+            [labels]="barChartLabels"
+            [options]="barChartOptions"
+            [legend]="barChartLegend"
+            [chartType]="barChartType"
             (chartHover)="chartHovered($event)"
             (chartClick)="chartClicked($event)"></canvas>
     </div>
-     <button (click)="printArrest()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-  Print Arrest
-</button>
 </div>
