--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,4 +4,5 @@
   Print Records
 </button>
 <arrest [arrestCount]="arrestCount"></arrest>
+<crime-types [crimeTypeCount]="crimeTypeCount"></crime-types>
 </div>
